Fixes for version 1.2.0.
git-svn-id: https://svn.apache.org/repos/asf/incubator/ctakes/trunk@1385619 13f79535-47bb-0310-9956-ffa450edef68